<resources>
    <string name="app_name">knueats</string>
    <string name="add_store">가게 추가</string>
    <string name="restaurant_name">이름</string>
    <string name="restaurant_name_hint">가게 이름</string>
    <string name="restaurant_description">설명</string>
    <string name="restaurant_description_hint">가게 설명</string>
    <string name="restaurant_tel">전화번호</string>
    <string name="restaurant_tel_hint">010–0000–0000</string>
    <string name="restaurant_location">주소</string>
    <string name="restaurant_location_hint">대구광역시 북구 대학로 80</string>
    <string name="restaurant_menu">메뉴</string>
    <string name="restaurant_menu_hint">메뉴 입력</string>
    <string name="restaurant_menu_price_hint">가격 입력</string>
    <string name="add_restaurant_menu">메뉴 등록</string>
    <string name="restaurant_category">카테고리</string>
    <string name="restaurant_score">별점</string>
    <string name="restaurant_score_text">%.2f</string>
    <string name="restaurant_max_score_text">/5</string>
    <string name="restaurant_door">위치</string>
    <string name="submit">등록</string>
</resources>