<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="TextContrastCheck">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/restaurant_name"
            android:textColor="@color/knueats_main"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/restaurant_name_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/restaurant_description"
            android:textColor="@color/knueats_main"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputExplan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/restaurant_description_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/restaurant_tel"
            android:textColor="@color/knueats_main"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/restaurant_tel_hint"
            android:inputType="phone"
            android:maxLength="13"
            android:minHeight="48dp"
            tools:text="010-0000-0000"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/restaurant_location"
            android:textColor="@color/knueats_main"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/restaurant_location_hint"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/restaurant_menu"
            android:textColor="@color/knueats_main"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <EditText
            android:id="@+id/inputMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/restaurant_menu_hint"
            android:inputType="text"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/addMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_design"
            android:text="@string/add_restaurant_menu"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/restaurant_category"
            android:textColor="@color/knueats_main"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/inputCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_design"
            android:text="@string/submit"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>